#166272340 user can create, modify, delete and read one and read all article (#27)
* feat-[166272340]: user create article

user should be able to create an article
user should be able to update an article
user should be able to get one article
user should be able to get all available articles
user should be able to delete an article
an article should have a unique slug
an article should have a timestamp
created migration to add a column for soft delete
an article can have images
an article should return the author details
an article should return user ratings
write a unit test for the created user and test all edge cases
write a unit test for the updated user and test all edge cases
write a unit test for the deleted user and test all edge cases
write a unit test to get one user
write a unit test to get all user
refactor findOne and findAll articles method to a different file
Add relation to get an article created by a user using a magic function hasArticle

[Delivers #166272340]
