# server/controllers/articles.js
@@ -1,31 +1,113 @@
-import sequelize from 'sequelize';
+import models from '@models';
+import { validateArticle } from '@validations/auth';
 import { validationResponse } from '@helpers/validationResponse';
 import Response from '@helpers/Response';
-import models from '@models';
+import { findAllArticle, findArticle } from '@helpers/articlePayload';
 import validateRating from '@validations/rating';
 
 const {
-  User, Article, Rating, Profile
+  Article
 } = models;
 
 /**
  * @exports ArticleController
  * @class ArticleController
- * @description Handles Article related actions
+ * @description Handles creation, modification, reading and deletion of Articles
  * */
 class ArticleController {
   /**
-   * Rate an article
-   * @async
-   * @param  {object} req - Request object
-   * @param {object} res - Response object
-   * @param {object} next The next middleware
-   * @return {json} Returns json object
-   * @static
-   */
+  * Create a new article
+  * @async
+  * @param  {object} req - Request object
+  * @param {object} res - Response object
+  * @param {object} next The next middleware
+  * @return {json} Returns json object
+  * @static
+  */
+  static async create(req, res, next) {
+    try {
+      const articleDetails = await validateArticle(req.body);
+      const { id: userId } = req.decoded;
+      const { title } = articleDetails;
+      articleDetails.title = articleDetails.title.replace(/ +/g, ' ');
+      const createArticleDetails = {
+        slug: title, userId, ...articleDetails
+      };
+
+      const createdArticle = await Article.create(createArticleDetails);
+      const { slug } = createdArticle.dataValues;
+      const payload = await findArticle({ slug });
+
+      return res.status(201).json({ status: 'success', message: 'Article created successfully', payload });
+    } catch (err) {
+      if (err.isJoi && err.name === 'ValidationError') {
+        return res.status(400).json({
+          status: 400,
+          errors: validationResponse(err)
+        });
+      }
+      next(err);
+    }
+  }
+
+  /**
+  * Updates an article
+  * @async
+  * @param  {object} req - Request object
+  * @param {object} res - Response object
+  * @param {object} next The next middleware
+  * @return {json} Returns json object
+  * @static
+  */
+  static async update(req, res, next) {
+    try {
+      const articleDetails = await validateArticle(req.body);
+      const { user } = req;
+      const { slug: updatedSlug } = req.params;
+      articleDetails.title = articleDetails.title.replace(/ +/g, ' ');
+
+      const getArticle = await Article.findOne({ where: { slug: updatedSlug } });
+
+      const canUpdate = await user.hasArticle(getArticle);
+
+
+      if (!getArticle) {
+        return Response.error(res, 404, 'Article does not exist');
+      }
+
+      if (!canUpdate) {
+        return Response.error(res, 403, 'You do not have permission to update this article!');
+      }
+
+      const updateArticle = await getArticle.update(articleDetails);
+      const { slug } = updateArticle.dataValues;
+      const payload = await findArticle({ slug });
+
+      return res.status(200).json({ status: 'success', message: 'Article successfully updated', payload });
+    } catch (err) {
+      if (err.isJoi && err.name === 'ValidationError') {
+        return res.status(400).json({
+          status: 400,
+          errors: validationResponse(err)
+        });
+      }
+      next(err);
+    }
+  }
+
+  /**
+  *
+  *
+  * @static
+  * @param {*} req
+  * @param {*} res
+  * @param {*} next
+  * @returns {json} Returns json object
+  * @memberof ArticleController
+  */
   static async rate(req, res, next) {
     try {
-      const userId = req.decoded.id;
+      const { id: userId } = req.user;
 
       // Validate the rating
       const articleDetails = await validateRating(req.body);
@@ -41,7 +123,7 @@ class ArticleController {
         through: { ratings: rate }
       });
 
-      const updatedArticle = await ArticleController.findArticle({ slug });
+      const updatedArticle = await findArticle({ slug });
 
       return Response.success(
         res,
@@ -61,60 +143,76 @@ class ArticleController {
   }
 
   /**
-   *
-   *
-   * @static
-   * @param {*} { articleId, slug }
-   * @returns {object} article details
-   * @memberof ArticleController
-   */
-  static async findArticle({ articleId, slug }) {
-    const where = {};
-    if (articleId) {
-      where.articleId = articleId;
-    } else if (slug) {
-      where.slug = slug;
-    } else {
-      throw new Error('Parameters undefined');
-    }
+  * Deletes an article
+  * @async
+  * @param  {object} req - Request object
+  * @param {object} res - Response object
+  * @param {object} next The next middleware
+  * @return {json} Returns json object
+  * @static
+  */
+  static async delete(req, res, next) {
+    try {
+      const { slug } = req.params;
+      const { id: userId } = req.user;
 
-    return Article.findOne({
-      where,
-      attributes: [
-        'id',
-        'slug',
-        'title',
-        'body',
-        'createdAt',
-        'updatedAt',
-        [
-          sequelize.fn('AVG', sequelize.col('articleRatings.ratings')),
-          'averageRating'
-        ]
-      ],
-      include: [
-        {
-          model: Rating,
-          as: 'articleRatings',
-          required: false,
-          attributes: []
-        },
-        {
-          model: User,
-          as: 'author',
-          attributes: [
-            'id',
-            'username'
-          ],
-          include: [{
-            model: Profile,
-            as: 'profile',
-            attributes: ['firstname', 'lastname', 'bio', 'avatar']
-          }]
-        }
-      ],
-      group: ['Article.id', 'author.id', 'author->profile.id']
-    });
+      const getArticle = await Article.findOne({ where: { slug } });
+
+      if (!getArticle) {
+        return Response.error(res, 404, 'Article does not exist');
+      }
+
+      const deletedArticle = await Article.destroy({ where: { slug, userId } });
+
+      if (!deletedArticle) {
+        return Response.error(res, 403, 'You do not have permission to delete this article!');
+      }
+
+      return res.status(200).json({ status: 'success', message: 'Article successfully deleted' });
+    } catch (err) {
+      next(err);
+    }
+  }
+
+  /**
+  * Gets an article
+  * @async
+  * @param  {object} req - Request object
+  * @param {object} res - Response object
+  * @param {object} next The next middleware
+  * @return {json} Returns json object
+  * @static
+  */
+  static async getAll(req, res, next) {
+    try {
+      const getAllArticles = await findAllArticle();
+      const payload = getAllArticles;
+      return res.status(200).json({ status: 'success', message: 'Articles successfully retrieved', payload });
+    } catch (err) {
+      next(err);
+    }
+  }
+
+  /**
+  * Gets an article
+  * @async
+  * @param  {object} req - Request object
+  * @param {object} res - Response object
+  * @param {object} next The next middleware
+  * @return {json} Returns json object
+  * @static
+  */
+  static async getOne(req, res, next) {
+    try {
+      const { slug } = req.params;
+      const payload = await findArticle({ slug });
+      if (!payload) {
+        return Response.error(res, 404, 'Article does not exist');
+      }
+      return res.status(200).json({ status: 'success', message: 'Article successfully retrieved', payload });
+    } catch (err) {
+      next(err);
+    }
   }
 }
 
