# server/models/article.js
@@ -1,3 +1,5 @@
+import slugCreator from '@helpers/slugCreator';
+
 module.exports = (sequelize, DataTypes) => {
   const Article = sequelize.define('Article', {
     id: {
@@ -23,16 +25,27 @@ module.exports = (sequelize, DataTypes) => {
       type: DataTypes.TEXT,
       allowNull: false
     },
+    image: {
+      type: DataTypes.STRING,
+      allowNull: true
+    },
     readTime: {
       type: DataTypes.STRING,
-      allowNull: false
+      allowNull: false,
+      defaultValue: '1 min'
     }
-  }, {});
+  }, {
+    hooks: {
+      beforeCreate: article => Article.createSlug(article)
+    },
+    paranoid: true
+  });
 
   Article.associate = (models) => {
     const {
       User, ArticleLike, Favourite, Rating, Comment, Tag, ReportArticle
     } = models;
+
     Article.belongsTo(User, {
       foreignKey: 'userId',
       as: 'author',
@@ -69,5 +82,11 @@ module.exports = (sequelize, DataTypes) => {
       foreignKey: 'articleId'
     });
   };
+
+  Article.createSlug = async (article) => {
+    const slug = await slugCreator(article.dataValues.slug);
+    await article.setDataValue('slug', slug);
+  };
+
   return Article;
 };
