# server/routes/api/articles.js
@@ -1,10 +1,15 @@
 import express from 'express';
-import Token from '@helpers/Token';
 import ArticleController from '@controllers/articles';
+import Token from '@helpers/Token';
 import trim from '@middlewares/trim';
 
-const articleRoutes = express.Router();
+const articlesRouter = express.Router();
 
-articleRoutes.post('/:slug/rate', trim, Token.authorize, ArticleController.rate);
+articlesRouter.get('/', ArticleController.getAll);
+articlesRouter.get('/:slug', ArticleController.getOne);
+articlesRouter.post('/', Token.authorize, ArticleController.create);
+articlesRouter.put('/:slug', Token.authorize, ArticleController.update);
+articlesRouter.delete('/:slug', Token.authorize, ArticleController.delete);
+articlesRouter.post('/:slug/rate', trim, Token.authorize, ArticleController.rate);
 
-export default articleRoutes;
+export default articlesRouter;
