# swagger.yaml
@@ -207,10 +207,196 @@ paths:
             $ref: "#/definitions/ApiResponse"
         400:
           description: "Invalid email/password supplied"
+  /articles:
+    post:
+      tags:
+      - "article"
+      summary: "Create article"
+      description: "Creates a new article in the application"
+      operationId: "createArticle"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - in: "formData"
+        name: "title"
+        description: "The article title"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+        maxLength: 500
+      - in: "formData"
+        name: "body"
+        description: "The article body"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+      - in: "formData"
+        name: "image"
+        description: "The image url"
+        required: false
+        type: "string"
+        format: "text"
+      responses:
+        200:
+          description: "Article created successfully"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Title/ body is not allowed to be empty"
+      security:
+      - api_key: []
+    get:
+      tags:
+      - "article"
+      summary: "user can get all articles"
+      description: "Returns all available articles"
+      operationId: "getArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+    delete:
+      tags:
+      - "article"
+      summary: "user can delete an articles"
+      description: "Deletes an article in application"
+      operationId: "deleteArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+      security:
+      - api_key: []
+    put:
+      tags:
+      - "article"
+      summary: "Update article"
+      description: "Updates an article in the application"
+      operationId: "updateArticle"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - in: "formData"
+        name: "title"
+        description: "The article title"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+        maxLength: 500
+      - in: "formData"
+        name: "body"
+        description: "The article body"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+      - in: "formData"
+        name: "image"
+        description: "The image url"
+        required: false
+        type: "string"
+        format: "text"
+      responses:
+        200:
+          description: "Article updated successfully"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Title/ body is not allowed to be empty"
+  /articles/{slug}:
+    get:
+      tags:
+      - "article"
+      summary: "user can get all articles"
+      description: "Returns all available articles"
+      operationId: "getArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+    delete:
+      tags:
+      - "article"
+      summary: "user can delete an articles"
+      description: "Deletes an article in application"
+      operationId: "deleteArticles"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "success"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "fail"
+      security:
+      - api_key: []
+    put:
+      tags:
+      - "article"
+      summary: "Update article"
+      description: "Updates an article in the application"
+      operationId: "updateArticle"
+      produces:
+      - "application/json"
+      - "application/xml"
+      parameters:
+      - in: "formData"
+        name: "title"
+        description: "The article title"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+        maxLength: 500
+      - in: "formData"
+        name: "body"
+        description: "The article body"
+        required: true
+        type: "string"
+        format: "text"
+        minLength: 4
+      - in: "formData"
+        name: "image"
+        description: "The image url"
+        required: false
+        type: "string"
+        format: "text"
+      responses:
+        200:
+          description: "Article updated successfully"
+          schema:
+            $ref: "#/definitions/ApiResponse"
+        400:
+          description: "Title/ body is not allowed to be empty"
   /articles/{slug}/rate:
     post:
       tags:
-      - "articles"
+      - "article"
       summary: "Rate Article"
       description: "Rates an article"
       operationId: "rateArticle"
@@ -276,6 +462,17 @@ definitions:
       id:
         type: "integer"
         format: "int64"
+  Article:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      title:
+        type: "string"
+      body:
+        type: "string"
+      image:
       userId:
         type: "string"
       bio:
